<resources>
    <string name="app_name">code</string>


    <string name="sel_simple_sample">Simple Sample</string>
    <string name="sel_card_view_sample">Card view</string>
    <string name="sel_applying_fonts">Applying Fonts</string>
    <string name="hello_world">Hello World</string>
    <string name="decoupling_composables">Decoupling Composables</string>
    <string name="button_composable_demo">Button Composable Demo</string>

    <string name="str_click_here">Click Here !!</string>
    <string name="str_button_clicked">Button clicked !!</string>
    <string name="modifiers_demo">Modifiers Demo</string>
    <string name="apply_style">Apply Style</string>
    <string name="surface_composable">Surface Composable</string>
    <string name="wrapping_the_composable">Wrapping The Composable</string>
    <string name="align_the_composable">Align the Composable</string>
    <string name="multiple_composables">Multiple Composables</string>
    <string name="reusing_composable">Reusing Composable</string>
    <string name="arrange_align_composable">Arrange Align Composable</string>
    <string name="nested_views_composable">Nested views composable</string>
    <string name="title_activity_dynamic_data_list">DynamicDataList</string>
    <string name="dynamic_views">Dynamic Views</string>
    <string name="title_activity_updating_state">updatingState</string>
    <string name="updating_state">Updating State</string>
    <string name="state_updation_using_timer">State updation using timer</string>
    <string name="title_activity_update_timer">UpdateTimer</string>
    <string name="remember_demo">Remember Demo</string>
    <string name="title_activity_remember_demo">RememberDemo</string>
    <string name="str_click_to_toggle">"Click To Toggle"</string>
    <string name="title_activity_hoisting_state">HoistingState</string>
    <string name="state_hoisting_demo">State Hoisting Demo</string>
    <string name="title_activity_demo_text_field">DemoTextField</string>
    <string name="text_field_demo">Text Field Demo</string>
    <string name="title_activity_view_model_demo">ViewModelDemo</string>
    <string name="view_model_demo">View Model Demo</string>
    <string name="widget_demos">Widget Demos</string>
    <string name="simple_demos">Simple Demos</string>
    <string name="row_and_column_demo">Row And Column Demo</string>
    <string name="title_activity_rows_and_columns">RowsAndColumnsActivity</string>
    <string name="title_activity_modifier_sample_one">ModifierSampleOneActivity</string>
    <string name="modifier_demos">Modifier Demos</string>
    <string name="title_activity_modifier_selection_demo_screen">Modifier Demo Selection</string>
    <string name="modifier_demo_1">Modifier Demo 1</string>
    <string name="spacer_demo">Spacer Demo</string>
    <string name="styling_demos">Styling Demos</string>
    <string name="title_activity_box_composable_demo">BoxComposableDemo</string>
    <string name="box_composable_demo">Box Composable Demo</string>
    <string name="surface_composable_demo">Surface Composable Demo</string>
    <string name="list_of_profiles">List of profiles</string>
    <string name="title_activity_profile_list_demo">ProfileListDemo</string>
    <string name="profile_list_screen">Profile List Screen</string>
    <string name="ui_sample_demos">UI Sample Demos</string>
    <string name="sample_practice_demos">Sample Practice Demos</string>
    <string name="title_activity_profile_list">Profile List</string>
    <string name="profile_list_sample">Profile List Sample</string>
    <string name="practice_sample_selection">Practice Sample Selection</string>

</resources>