<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:fillViewport="true"
    android:padding="@dimen/selection_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnHelloWorldId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />

        <Button
            android:id="@+id/btnDecoupleComposableId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decoupling_composables" />

        <Button
            android:id="@+id/btnButtonComposableId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_composable_demo" />

        <Button
            android:id="@+id/btnModifiersId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modifiers_demo" />

    </LinearLayout>
</ScrollView>