<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:fillViewport="true"
    android:padding="@dimen/selection_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnRowColumnDemoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/row_and_column_demo" />

        <Button
            android:id="@+id/btnSpacerDemoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spacer_demo" />

        <Button
            android:id="@+id/btnBoxComposableDemoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/box_composable_demo" />

        <Button
            android:id="@+id/btnSurfaceComposableDemoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/surface_composable_demo" />

    </LinearLayout>

</ScrollView>