<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:fillViewport="true"
    android:padding="@dimen/selection_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnWidgetDemosId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/widget_demos" />

        <Button
            android:id="@+id/btnSimpleDemosId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple_demos" />

        <Button
            android:id="@+id/btnModifierDemosId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modifier_demos" />

        <!--<Button
            android:id="@+id/btnStylingDemosId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/styling_demos" />-->

        <Button
            android:id="@+id/btnSamplePracticeId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_practice_demos" />

    </LinearLayout>

</ScrollView>